# Quantum

./: .GITATTRIBUTES  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  LICENSE_THIRD_PARTY.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
DSRT-Engine/: CMake.txt
DSRT/Engine/Core/: DSRTCore.h  DSRTLogger.h  DSRTMemory.h  DSRTTime.h  DSRTTypes.h
DSRT/Engine/Core/Containers/: DSRTArray.h  DSRTHash.h  DSRTMap.h  DSRTString.h
DSRT/Engine/Core/Math/: Mat4.h  Quaternion.h  Transform.h  Vec2.h  Vec3.h  Vec4.h
DSRT/Engine/Core/Platform/: Platform.h
Docs/: coding-guidelines.md
Examples/ExampleProject/Config/: DefaultEngine.ini
Packaging/: descriptor.json
Tools/CodeGen/: gen_bindings.py
examples/01_bssic_window/: main.cpp
include/DSRT/: DSRT.h  Engine.h
include/DSRT/Audio/: AudioDevice.h  Sound.h
include/DSRT/Core/: Memory.h  Types.h
include/DSRT/Graphics/: Renderer.h
include/DSRT/Input/: InputManager.h
include/DSRT/Math/: Matrix4.h  Vector3.h
include/DSRT/Physics/: PhysicsWorld.h
include/DSRT/Resource/: ResourceManager.h
include/DSRT/Scene/: Entity.h  World.h
include/DSRT/scene/: Component.h
src/core/: QuantumConfig.js  QuantumCore.js  QuantumError.js  QuantumLogger.js  QuantumModule.js  QuantumPluginSystem.js  QuantumRegistry.js
src/internal/Graphics/OpenGL/: GLRendererImpl.h
src/public/: Engine.cpp
src/public/Core/: Assert.cpp  Log.cpp  Memory.cpp
src/public/Math/: Matrix4.cpp  Vector3.cpp
src/systems/: System.js
